更新 2010-01-08-post-chat.md

--- a/_posts/2010-01-08-post-chat.md
+++ b/_posts/2010-01-08-post-chat.md
@@ -1,134 +1,26 @@
 ---
-title: "Post: Chat"
+title: "电脑c盘用户名频繁报错，从中文改成英文教程"
 categories:
-  - Blog
+  - 小红书
 tags:
-  - chat
-  - Post Formats
+  - windows
+  - 电脑
 ---
 
-Abbott: Strange as it may seem, they give ball players nowadays very peculiar names.
+本文转自我的小红书，为了节省人力，这里不放图片了，麻烦大家自行前往小红书看。如果有不方便用小红书的，请给我发邮件。
 
-Costello: Funny names?
+刚刚写了1000字的文案又没了，心态要崩了
 
-Abbott: Nicknames, nicknames. Now, on the St. Louis team we have Who's on first, What's on second, I Don't Know is on third--
+大家有时会发现自己电脑在安装软件时总会报错，这是因为电脑C盘用户名是中文导致的（如图一），很多外国软件不支持中文，就会找不到路径从而报错。今天就来教大家怎样把这个用户名改成英文，这个方法会比网上别的方法要复杂一点，不过是不会丢数据的，也算是更保守的一个方法，毕竟数据最重要吗
 
-Costello: That's what I want to find out. I want you to tell me the names of the fellows on the St. Louis team.
+1️⃣创建一个新账户。先同时按住win➕x，打开图二的界面，选择windows power shell我画线那个，他就会弹出图三的命令框，输入我图三中的命令netplwiz，他会出现一个图四的小方框。选择添加，点不使用Mictosoft账户登录，（图五），选择本地账户（图六），输入一个你想创建的账户名字（图七），然后选中刚刚创建的账户，点属性，给他管理员权限（图八）。这样一个管理员权限的账户就创建好了
+2️⃣改名字。我们首先先切换用户到我们刚刚创建的账号上，大家可以直接点开始切换（图九）。等他准备好我们就可以进入到新用户的界面了（时间由你的设备和网络来定），这时候先不要直接改，还是先win➕x，选择任务管理器，（图十）在用户里把我们第一个账户的进程结束掉（十一十二）不然这个名字是改不成的。接着我们打开C盘，选择用户，把我们想改名字的文件夹的名字改掉就行（图十三）
+3️⃣改注册表。网上很多教程到这一步就结束了，实际上这样做是很不保险的，因为数据很容易丢掉。首先大家先win➕r打开命令框，输入regedit，打开注册表。这里真的特别重要，改错一步可就要重装系统了，先点开
+HKEY-LOCAL-MACHINE，在里面找到SOFTWARE，找到Microsoft，（图十四）再在里面找到Windowa NT（图十五），往下找，找到Profilelist，找到其中的倒数第二个（图十六）打开，接着我们会看到有一个C：\user\你的老用户名，打开这一栏，把里面改成C；\user\你的新用户名，这样所有的信息就改好了
+4️⃣这时我们再切换回我们之前的账号，也不会有弹窗之类的啦，这个方法是不需要注销账号的，安全系数高，。如果你不想要这个小号，输入刚开头的代码，把他删除即可，想要的也可以留着
 
-Abbott: I'm telling you. Who's on first, What's on second, I Don't Know is on third--
+补充：最后改注册表那里填的名称是第二步最后改的那个文件夹名。
 
-Costello: You know the fellows' names?
+原文链接：http://xhslink.com/o/2Nev9jtLuA7 
 
-Abbott: Yes.
-
-Costello: Well, then who's playing first?
-
-Abbott: Yes.
-
-Costello: I mean the fellow's name on first base.
-
-Abbott: Who.
-
-Costello: The fellow playin' first base.
-
-Abbott: Who.
-
-Costello: The guy on first base.
-
-Abbott: Who is on first.
-
-Costello: Well, what are you askin' me for?
-
-Abbott: I'm not asking you--I'm telling you. Who is on first.
-
-Costello: I'm asking you--who's on first?
-
-Abbott: That's the man's name.
-
-Costello: That's who's name?
-
-Abbott: Yes.
-
-Costello: When you pay off the first baseman every month, who gets the money?
-
-Abbott: Every dollar of it. And why not, the man's entitled to it.
-
-Costello: Who is?
-
-Abbott: Yes.
-
-Costello: So who gets it?
-
-Abbott: Why shouldn't he? Sometimes his wife comes down and collects it.
-
-Costello: Who's wife?
-
-Abbott: Yes. After all, the man earns it.
-
-Costello: Who does?
-
-Abbott: Absolutely.
-
-Costello: Well, all I'm trying to find out is what's the guy's name on first base?
-
-Abbott: Oh, no, no. What is on second base.
-
-Costello: I'm not asking you who's on second.
-
-Abbott: Who's on first!
-
-Costello: St. Louis has a good outfield?
-
-Abbott: Oh, absolutely.
-
-Costello: The left fielder's name?
-
-Abbott: Why.
-
-Costello: I don't know, I just thought I'd ask.
-
-Abbott: Well, I just thought I'd tell you.
-
-Costello: Then tell me who's playing left field?
-
-Abbott: Who's playing first.
-
-Costello: Stay out of the infield! The left fielder's name?
-
-Abbott: Why.
-
-Costello: Because.
-
-Abbott: Oh, he's center field.
-
-Costello: Wait a minute. You got a pitcher on this team?
-
-Abbott: Wouldn't this be a fine team without a pitcher?
-
-Costello: Tell me the pitcher's name.
-
-Abbott: Tomorrow.
-
-Costello: Now, when the guy at bat bunts the ball--me being a good catcher--I want to throw the guy out at first base, so I pick up the ball and throw it to who?
-
-Abbott: Now, that's he first thing you've said right.
-
-Costello: I DON'T EVEN KNOW WHAT I'M TALKING ABOUT!
-
-Abbott: Don't get excited. Take it easy.
-
-Costello: I throw the ball to first base, whoever it is grabs the ball, so the guy runs to second. Who picks up the ball and throws it to what. What throws it to I don't know. I don't know throws it back to tomorrow--a triple play.
-
-Abbott: Yeah, it could be.
-
-Costello: Another guy gets up and it's a long ball to center.
-
-Abbott: Because.
-
-Costello: Why? I don't know. And I don't care.
-
-Abbott: What was that?
-
-Costello: I said, I DON'T CARE!
-
-Abbott: Oh, that's our shortstop!
+相关图片：
