--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,8 +1,8 @@
 ---
-title: "Page Not Found"
-excerpt: "Page not found. Your pixels are in another canvas."
+title: "页面丢失"
+excerpt: "页面丢失了，或许你访问了错误的url"
 sitemap: false
 permalink: /404.html
 ---
 
-Sorry, but the page you were trying to view does not exist.
+非常抱歉，但是你尝试访问的这个页面貌似不存在…麻烦再次核对，有什么问题请给我发邮件。
