更新 2010-03-07-post-link.md

--- a/_posts/2010-03-07-post-link.md
+++ b/_posts/2010-03-07-post-link.md
@@ -1,15 +1,27 @@
 ---
-title: "Post: Link"
+title: "最优方案！Sidestore侧载"
 categories:
   - Blog
 tags:
-  - link
-  - Post Formats
-link: https://github.com
+  - ios
+  - 侧载
 ---
 
-This theme supports **link posts**, made famous by John Gruber. To use, just add `link: http://url-you-want-linked` to the post's YAML front matter and you're done.
+Sidestore能够像巨魔一样下载应用，今天来出一期使用及下载教程，有用就关注一下吧，这个方法是全版本通用哈。Side是Altstore的一个分支，在保留了其原有的简洁性上，也具有了极高的安全系数。  
 
-> And this is how a quote looks.
+1️⃣下载。你需要有一台win10以上的电脑或者一台比较新的Mac，用电脑浏览器打开Sidestore的官网，向下拉到最底，把三个文件都下下来。注意‼️这里一定要从官网下，不然可能会下载失败，甚至无法使用。（如图一）。
 
-Some [link](#) can also be shown.
+2️⃣下载好后，先把altstore安装，这个我之前有贴子将，这里不再赘述，一路next就好。
+
+3️⃣如果你没有安装过itunes和icloud，他会提示没有找到（如图六）这里直接点下载，即download，他就会弹到浏览器，就开始下载了。如果你安装的是微软商店的itunes和icloud，从设置里卸载掉，然后再从官网或者这个窗口下就可以了。  
+
+4️⃣下载好itunes和icloud后，先打开这两个软件，登录上你的苹果账号。随后长按shift，再打开alt store，这个软件打开后不会有什么弹窗，他会出现在你电脑的右下方，一个棱形的标志，点开那个标志就会出现图七的方框，此时将你的手机用一根可靠的数据线与电脑相连，保证三个软件都在运行，这个十分重要。随后选择SideStore.ipa，输入你的id安装一下[害羞R]弹出success就是成功（图六）。
+
+5️⃣这时你直接点是打不开，还要在电脑操作。运行idevice pair，把你的设备和电脑连接，并且信任。随后点击generate，生成配置文件（图八）点击左下角Sidestore里的install。当出现图九的界面就是成功了。  
+
+6️⃣接下来去appstore里下载stosvpn，这个可能需要外区才可以。主要目的是自身通讯，不会连接外部服务器。  
+
+7️⃣搞定后点击connect，再打开side，登录下id，刷新下应用，就大功告成啦！你可以选择左上角的➕号来侧载应用，续签和alt一样，refresh就好。
+
+总体来说还是很简便啦，我记得一年前还要获取配置文件，自己往side导入。
+大家也是久等啦，这两天才把项目做好，就抓紧写教程啦
